# HarpIA_Model_Gateway

./: README.md  pyproject.toml  run_gateway.py
config/: .gitignore  config_TEMPLATE.py
containers/prod/: Dockerfile
harpia_moodle_answer_providers/: __main__.py  cfg_reader.py  server.py
harpia_moodle_answer_providers/answer_providers/providers/: base.py  constant.py  echo.py  gpt.py  ollama.py
src/harpia_model_gateway/: __main__.py  cfg_reader.py  server.py
src/harpia_model_gateway/answer_providers/providers/: constant.py  echo.py  gpt.py  ollama.py
